Implemented basic look and feel of the main page

--- a/Geofence/Base.lproj/Main.storyboard
+++ b/Geofence/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="iv4-HQ-4Jf">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -12,7 +12,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Geofence" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inside" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPX-vC-efS">
@@ -28,14 +28,15 @@
                                 </constraints>
                             </mapView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NlO-8U-ww3">
-                                <rect key="frame" x="0.0" y="446" width="414" height="290"/>
+                                <rect key="frame" x="0.0" y="446" width="414" height="246"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="120" id="6Ut-y0-4DB"/>
                                 </constraints>
+                                <sections/>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wifi SSID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fmg-IA-O5v">
-                                <rect key="frame" x="20" y="410" width="86" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Options" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fmg-IA-O5v">
+                                <rect key="frame" x="20" y="410" width="73" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -53,17 +54,85 @@
                             <constraint firstItem="Fmg-IA-O5v" firstAttribute="top" secondItem="SPX-vC-efS" secondAttribute="bottom" constant="40" id="ckY-ve-JT0"/>
                             <constraint firstItem="SPX-vC-efS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fux-N2-4Lg"/>
                             <constraint firstItem="oZI-5R-YP4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fxv-tG-sUa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Fmg-IA-O5v" secondAttribute="trailing" symbolic="YES" id="m5x-jF-v9V"/>
                             <constraint firstItem="NlO-8U-ww3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="v7N-sC-iRp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" id="d6d-nf-P62"/>
                     <connections>
                         <outlet property="mapView" destination="oZI-5R-YP4" id="Qtf-ON-evj"/>
+                        <outlet property="tableView" destination="NlO-8U-ww3" id="bor-gI-6Nc"/>
+                        <segue destination="wIW-Jx-VHm" kind="show" identifier="ModifyGeofence" id="UuJ-0s-7cm"/>
+                        <segue destination="d6h-iP-2wB" kind="show" identifier="SelectSSID" id="aqz-74-rpv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+            <point key="canvasLocation" x="1044.9275362318842" y="137.77173913043478"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="NOO-HI-oAu">
+            <objects>
+                <viewController id="wIW-Jx-VHm" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zat-pc-H0j">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="nAD-Qf-foe"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="xKF-Pa-Xum"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P33-tt-TYX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1992.753623188406" y="-60.326086956521742"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="b4C-CD-ZlC">
+            <objects>
+                <viewController id="d6h-iP-2wB" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xaF-bV-hhE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bwq-YN-0xB">
+                                <rect key="frame" x="0.0" y="44" width="414" height="692"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ej6-MO-A3Q" firstAttribute="trailing" secondItem="Bwq-YN-0xB" secondAttribute="trailing" id="Du2-aG-Z5D"/>
+                            <constraint firstItem="Bwq-YN-0xB" firstAttribute="top" secondItem="ej6-MO-A3Q" secondAttribute="top" id="OAh-je-OmL"/>
+                            <constraint firstItem="Bwq-YN-0xB" firstAttribute="leading" secondItem="ej6-MO-A3Q" secondAttribute="leading" id="j7o-CT-iPx"/>
+                            <constraint firstItem="ej6-MO-A3Q" firstAttribute="bottom" secondItem="Bwq-YN-0xB" secondAttribute="bottom" id="qrt-xe-i6n"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ej6-MO-A3Q"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ga9-13-2zQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="86s-yQ-OqP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1993" y="675"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9tv-ON-is7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iv4-HQ-4Jf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ftD-kb-qtO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ACS-la-wGb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8zS-J8-xSQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="137.77173913043478"/>
         </scene>
     </scenes>
 </document>
